--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <meta name="msvalidate.01" content="2C881A3B7B472793E79CB8B6BD8FF253" />
     <title>Document</title>
 </head>
 <body>
